# vista-data-mcp

./: .env.example  README.md  ch_connector.py  es_connector.py  install-vista-data-mcp  installer.py  mcp_server.py  pyproject.toml
scripts/: README.md  apps-script.gs  report-vista-usage.sh  vista-data-usage-report.service  vista-data-usage-report.timer
